[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stuff/Boss Button/BossButton.gd" type="Script" id=1]
[ext_resource path="res://Stuff/Button and Block/button pushed.png" type="Texture" id=2]
[ext_resource path="res://Stuff/Button and Block/button.png" type="Texture" id=3]
[ext_resource path="res://Audio/switch25.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/switch28.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "pushed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "unpushed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 5 )

[node name="BossButton" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "unpushed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2.97696 )
shape = SubResource( 2 )

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="UnpushSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_BossButton_body_entered"]
